# CL0

./: Cargo.toml  README.md  buf.gen.yaml  buf.work.yaml  cl0_parser  cl0_repl  cl0_web_server
crates/cl0_node/: Cargo.toml  build.rs
crates/cl0_node/proto/: control.proto
crates/cl0_node/proto/common/: rules.proto  types.proto
crates/cl0_node/proto/control_plane/: control_plane.proto
crates/cl0_node/proto/node/: node.proto
crates/cl0_node/proto/web/: web.proto
crates/cl0_node/src/: api.rs  control_plane.rs  event_handler.rs  lib.rs  logger.rs  node.rs  node_client.rs  server.rs  types.rs  utils.rs  visitor.rs
crates/cl0_node/tests/: node_cp_comms.rs  node_test.rs
crates/cl0_parser/: Cargo.toml
crates/cl0_parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/cl0_parser/tests/: lexer_test.rs  utils.rs
crates/cl0_parser/tests/parser/: action.rs  atomic_condition.rs  compound.rs  condition.rs  directives.rs  mod.rs  primitive_condition.rs  primitive_event.rs  rule.rs
frontend/: .prettierrc.mjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: http.ts
frontend/src/api/live/: client.ts  transport.ts  types.ts
frontend/src/components/common/: PaneHeader.tsx
frontend/src/components/graph/: MermaidView.tsx
frontend/src/components/layout/: CenterPane.tsx  LeftSidebar.tsx  RightPane.tsx
frontend/src/components/policy/: PolicyEditor.tsx  RulesPanel.tsx  VariablesPanel.tsx
frontend/src/components/repl/: ReplPanel.tsx
frontend/src/components/sessionGate/: SessionGate.tsx
frontend/src/components/sidebar/: PresencePanel.tsx  SidebarTree.tsx
frontend/src/hooks/: useDebouncedState.ts  useLiveStream.ts  usePresence.ts  useRepl.ts  useResizeObserver.ts  useStatus.ts  useSystemTree.ts
frontend/src/providers/: ThemeProvider.tsx
frontend/src/store/: index.ts  types.ts
frontend/src/styles/: global.css
frontend/src/utils/: clsx.ts  formatters.ts
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_main.rs  server.rs  token.rs
tests/: lexer_test.rs  mod.rs  parser_test.rs  utils.rs
tests/parser/: action.rs  mod.rs  primitive_condition.rs  primitive_event.rs
(+8 files in other folders)
