[package]
name = "cl0_node"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
cl0_parser = { path = "../cl0_parser" }
async-recursion = "1.1.1"
thiserror = "2.0.12"
rand = "0.9.2"
futures = "0.3.31"
dashmap = "6.1.0"
chrono = "0.4.41"
gethostname = "1.0.2"

tonic = "0.14.1"
prost = "0.14.1"
tonic-web = "0.14.1"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic-prost = "0.14.1"

uuid = { version = "1.18.0", features = ["v4", "v7"] }

[build-dependencies]
tonic-prost-build = "0.14.1"
